1.6-1 (NOT YET RELEASED)

  * Added some vectorization code to improve performance.
  * Added "toLatex" method.
  * Included "print" in the exported methods in the NAMESPACE file.
  * Added "print.results" argument to "print" that can be used to
    suppress the printing.
  * Added an "is.null()" check on the "table.placement" argument.
  * Added an example of header and footer specification with longtable
    to the vignette.  

1.6-0 (2011-10-07)
  * Allow "table*" as a value for "floating.environment" in print.xtable().
  * Fix bug under which multiple logical columns were formatted incorrectly.
  * Stop with an error if "xtable.table" is used on a table with more than
    two dimensions.
  * Add some newlines to "Rd" file to prevent lines from extending off the
    page in the PDF version of the help files.
  * Changed the maintainer to "Charles Roosen".
  * Created an "xtable" project on R-Forge.

1.5-6 (2009-10-30)
  * Support caption at the top in the LaTeX longtable.
  * Use options()$OutDec for decimal mark.

1.5-5 (2009-03-24)
  * Added html.table.attributes to set the attributed of the <TABLE> tag for HTML tables.
  * Accommodated logicals by converting to characters.
  * Add an extra space at end of each line for LaTeX tables.
  * Fixed typographical error in documentation.
