@@ -11,7 +11,8 @@
 		sanitize.text.function=NULL, sanitize.rownames.function=sanitize.text.function,
 		sanitize.colnames.function=sanitize.text.function, math.style.negative=FALSE, 
 		html.table.attributes="border=1", 
-		print.results=TRUE, ...)}
+		print.results=TRUE, 
+        format.args=NULL, ...)}
 \arguments{
   \item{x}{An object of class \code{"xtable"}.}
   \item{type}{Type of table to produce.  Possible values for \code{type} are \code{"latex"} or \code{"html"}.
@@ -45,6 +46,7 @@
   \item{math.style.negative}{In a LaTeX table, if \code{TRUE}, then use $-$ for the negative sign (as was the behavior prior to version 1.5-3).  Default value is \code{FALSE}.}
   \item{html.table.attributes}{In an HTML table, attributes associated with the \code{<TABLE>} tag.  Default value is \code{border=1}.}
   \item{print.results}{If \code{TRUE}, the generated table is printed to standard output.  Set this to \code{FALSE} if you will just be using the character vector that is returned invisibly.}
+  \item{format.args}{List of arguments for the \code{formatC} function.  For example, standard German number separators can be specified as \code{format.args=list(big.mark = "'", decimal.mark = ","))}.}
   \item{...}{Additional arguments.  (Currently ignored.)}
 }
 \details{
