@@ -193,6 +193,9 @@ glm.D93 <- glm(counts ~ outcome + treatment, family=poisson())
 print(xtable(glm.D93,align="r|llrc"))
 print(xtable(anova(glm.D93)),hline.after=c(1),size="small")
 
+## Demonstration of additional formatC() arguments.
+print(fm1.table, format.args=list(big.mark = "'", decimal.mark = ","))
+
 ## Demonstration of longtable support.
 ## Remember to insert \usepackage{longtable} on your LaTeX preamble
 x <- matrix(rnorm(1000), ncol = 10)
